--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/dseg14": "^4.5.3",
     "@fontsource/oswald": "^4.5.9",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
@@ -16,11 +17,14 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/uuid": "^8.3.4",
     "countapi-js": "^1.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
